--- a/style.css
+++ b/style.css
@@ -7,21 +7,83 @@
     --cor-vinho-escuro: #74121D;
     --cor-vinho-profundo: #580C1F;
     --cor-branco: #FFFFFF;
-  }
-
-  /* Estilos para o Carrossel de Imagens */
-.carousel-item img {
-    max-width: 100%; /* Garante que a largura das imagens se ajuste ao contêiner */
-    height: auto; /* Mantém a proporção de aspecto das imagens */
-  }
+}
 
 body {
     font-family: var(--font-padrao);
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
+
+
+/* Estilo para o menu de navegação */
+.navbar-collapse {
+    padding: 10px 0;
+    /* Espaçamento interno */
+}
+
+.navbar-nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.nav-item {
+    margin: 0 15px;
+    position: relative;
+}
+
+.nav-link {
+    text-decoration: none;
+    font-size: 20px;
+    transition: color 0.3s;
+}
+
+.nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #ff6347;
+    /* Cor do sublinhado */
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.3s;
+}
+
+.nav-link:hover {
+    color: #ff6347;
+    /* Cor do texto ao passar o mouse */
+}
+
+.nav-link:hover::before {
+    transform: scaleX(1);
+}
+
+
+
+
+
+/* Estilos para o Carrossel de Imagens */
+.carousel-item img {
+    max-width: 100%;
+    /* Garante que a largura das imagens se ajuste ao contêiner */
+    height: auto;
+    /* Mantém a proporção de aspecto das imagens */
+}
+
+
+
 ::selection {
-    background-color: var(--cor-vermelho-escuro); /* Cor de fundo da seleção de texto */
-    color: var(--cor-branco); /* Cor do texto selecionado */
+    background-color: var(--cor-vermelho-escuro);
+    /* Cor de fundo da seleção de texto */
+    color: var(--cor-branco);
+    /* Cor do texto selecionado */
 }
 
 
@@ -36,7 +98,8 @@ body {
 
 /* style.css */
 .animated-title {
-    animation: fadeIn 2s ease-in-out; /* Nome da animação, duração e função de temporização */
+    animation: fadeIn 2s ease-in-out;
+    /* Nome da animação, duração e função de temporização */
 }
 
 @keyframes fadeIn {
@@ -44,6 +107,7 @@ body {
         opacity: 0;
         transform: translateY(20px);
     }
+
     100% {
         opacity: 1;
         transform: translateY(0);
@@ -60,10 +124,12 @@ body {
     position: absolute;
     width: 0;
     height: 2px;
-    background-color: var(--cor-vermelho-escuro); /* Cor da linha */
+    background-color: var(--cor-vermelho-escuro);
+    /* Cor da linha */
     bottom: 0;
     left: 0;
-    transition: width 1s; /* Duração da animação */
+    transition: width 1s;
+    /* Duração da animação */
 }
 
 .animated-border-bottom:hover::before {
@@ -73,12 +139,14 @@ body {
 
 .hero-section {
     position: relative;
-    height: 100vh; /* Ajusta a altura para cobrir a tela inteira */
+    height: 100vh;
+    /* Ajusta a altura para cobrir a tela inteira */
     overflow: hidden;
 }
 
 video {
-    object-fit: cover; /* Faz o vídeo cobrir todo o espaço da div */
+    object-fit: cover;
+    /* Faz o vídeo cobrir todo o espaço da div */
     width: 100%;
     height: 100%;
 }
@@ -89,7 +157,8 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.7)); /* Cor de fundo semi-transparente */
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7));
+    /* Cor de fundo semi-transparente */
 }
 
 .hero-content {
@@ -97,27 +166,33 @@ video {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #fff; /* Cor do texto */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Sombra de texto para contraste */
+    color: #fff;
+    /* Cor do texto */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    /* Sombra de texto para contraste */
 }
 
 #content-between {
-    padding: 20px; /* Adicione preenchimento para criar espaço em torno do conteúdo */
-    background-color: #f0f0f0; /* Adicione uma cor de fundo para destacar o conteúdo */
-  }
-  
-  
-  
+    padding: 20px;
+    /* Adicione preenchimento para criar espaço em torno do conteúdo */
+    background-color: #f0f0f0;
+    /* Adicione uma cor de fundo para destacar o conteúdo */
+}
 
-  .card-img-top {
-    transition: transform 0.3s; /* Adiciona uma transição suave de 0.2 segundos na propriedade 'transform' */
-  }
-  
-  .card:hover .card-img-top {
-    transform: scale(1); /* Aumenta a escala da imagem em 10% no hover */
-  }
-  
-  .card {
+
+
+
+.card-img-top {
+    transition: transform 0.3s;
+    /* Adiciona uma transição suave de 0.2 segundos na propriedade 'transform' */
+}
+
+.card:hover .card-img-top {
+    transform: scale(1);
+    /* Aumenta a escala da imagem em 10% no hover */
+}
+
+.card {
     background: rgba(255, 255, 255, 0.35);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(13.5px);
@@ -125,27 +200,34 @@ video {
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     transition: transform 0.3s;
-  }
-  
-/* Estilizar as imagens do carrossel no hover */
-.hover-image:hover {
-    opacity: 0.8; /* Reduzir a opacidade da imagem no hover */
-    transform: scale(1.05); /* Aumentar ligeiramente o tamanho da imagem no hover */
-    cursor: pointer; /* Alterar o cursor para indicar interação */
 }
 
-  
-  .custom-btn-red {
-    background-color:var(--cor-vermelho-escuro); /* Cor vermelha personalizada */
-    border-color: var(--cor-vermelho-intenso); /* Cor da borda */
-    color: var(--cor-branco); /* Cor do texto (branco) */
-  }
-  
-  /* Efeitos de hover para o botão */
-  .custom-btn-red:hover {
-    background-color: #A51C30; /* Cor de hover personalizada */
+/* Estilizar as imagens do carrossel no hover */
+.hover-image:hover {
+    opacity: 0.8;
+    /* Reduzir a opacidade da imagem no hover */
+    transform: scale(1.05);
+    /* Aumentar ligeiramente o tamanho da imagem no hover */
+    cursor: pointer;
+    /* Alterar o cursor para indicar interação */
+}
+
+
+.custom-btn-red {
+    background-color: var(--cor-vermelho-escuro);
+    /* Cor vermelha personalizada */
+    border-color: var(--cor-vermelho-intenso);
+    /* Cor da borda */
+    color: var(--cor-branco);
+    /* Cor do texto (branco) */
+}
+
+/* Efeitos de hover para o botão */
+.custom-btn-red:hover {
+    background-color: #A51C30;
+    /* Cor de hover personalizada */
     border-color: #A51C30;
-  }
+}
 
 
 .title-custom-table {
@@ -156,19 +238,21 @@ video {
 
 /* Estilizar estrelas como amarelas ou douradas */
 .star-yellow {
-    color: #FFD700; /* Cor amarela ou dourada */
+    color: #FFD700;
+    /* Cor amarela ou dourada */
     font-size: 2rem;
 }
 
-  
 
-  table {
+
+table {
     border-collapse: collapse;
     width: 80%;
     margin: 80px auto;
 }
 
-th, td {
+th,
+td {
     border: 1px solid #ccc;
     padding: 8px;
     text-align: center;
@@ -188,16 +272,19 @@ tbody tr:nth-child(odd) {
 }
 
 tbody tr:hover {
-    background-color: var(--cor-vermelho-escuro); /* Cor de fundo ao passar o mouse */
+    background-color: var(--cor-vermelho-escuro);
+    /* Cor de fundo ao passar o mouse */
     color: var(--cor-branco);
 }
 
 /* Estilo para o parallax */
 .parallax {
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./assets/bg-ifood.jpg'); /* Substitua com o caminho para a sua imagem */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./assets/bg-ifood.jpg');
+    /* Substitua com o caminho para a sua imagem */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 300px; /* Defina a altura desejada para o parallax */
+    height: 300px;
+    /* Defina a altura desejada para o parallax */
 }
